Correctly align the facebook button

--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -3,3 +3,6 @@
 .tagline {
     background: $subtitle-bg;
 }
+.fb_iframe_widget span {
+    vertical-align: baseline !important;
+}
